--- a/haskell-library.cabal
+++ b/haskell-library.cabal
@@ -63,7 +63,7 @@ library
   ghc-options:         -Wall
 
   -- Other library packages from which modules are imported.
-  build-depends:       base ^>=4.13.0.0
+  build-depends:       base >=4.12.0.0
                      , acme-missiles  
 
   -- Directories containing source files.
